--- a/Report3/home-test/aut_tasklist.html
+++ b/Report3/home-test/aut_tasklist.html
@@ -24,6 +24,7 @@
     <style type="text/css">
       tab1 { padding-left: 49em; }
       tab2 { padding-left: 50em; }
+      tab3 { padding-left: 5em; }
     </style>
 
   </head>
@@ -31,15 +32,13 @@
   <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-light bg-light static-top">
+    <nav class="navbar navbar-light bg-light static-top"  style = "
+    height: 70px;">
       <div class="container">
         <a class="icon" href="aut_index.html">
           <img class="img-fluid mb-2"  src="img/proplanlogo.svg" alt="" href="aut_index.html"></a>
         <a class="navbar-brand" href="aut_index.html">Home</a>
-        <a class="navbar-brand" href="aut_about.html">About</a>
         <a class="navbar-brand" href="aut_projects.html">Projects</a>
-        <a class="navbar-brand" href="aut_faq.html">FAQ</a>
-        <a class="navbar-brand" href="aut_contact.html">Contact</a>
         <div class="btn-group">
           <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Username
@@ -76,7 +75,7 @@
 	
 
 
-  <div id="id04" class="modal" align="center">
+  <div id="id04" class="modal" align="left">
 
     <form class="modal-content animate" action="/action_page3.php">
       <div class="imgcontainer">
@@ -103,7 +102,7 @@
 
       </div>
 
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <tab3><tab3><button  type="submit" class="btn btn-lg btn-primary" style ="width:50%;">Submit</button><br>
     </form>
   </div>
 
