--- a/Report3/home-test/aut_thisprojectcoord.html
+++ b/Report3/home-test/aut_thisprojectcoord.html
@@ -32,16 +32,14 @@
   <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-light bg-light static-top">
+    <nav class="navbar navbar-light bg-light static-top"  style = "
+    height: 70px;">
       <div class="container">
         <a class="icon" href="index.html">
           <img class="img-fluid mb-2"  src="img/proplanlogo.svg" alt="" href="aut_index.html">
         </a>
         <a class="navbar-brand" href="aut_index.html">Home</a>
-        <a class="navbar-brand" href="aut_about.html">About</a>
         <a class="navbar-brand" href="aut_projects.html">Projects</a>
-        <a class="navbar-brand" href="aut_faq.html">FAQ</a>
-        <a class="navbar-brand" href="aut_contact.html">Contact</a>
         <div class="btn-group">
           <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Username
@@ -140,6 +138,32 @@
   <div>
     <a class="btn btn-primary" href="aut_tasklist.html" onclick="document.getElementById('id03').style.display='block'" style="width:auto;">Task List</a>&ensp;&ensp;
     <a class="btn btn-primary" href="aut_forum.html" onclick="document.getElementById('id03').style.display='block'" style="width:auto;">Forum</a>
+
+
+<section>
+    <br>
+<ul class="nav nav-tabs" id="myTab" role="tablist">
+
+<li class="nav-item">
+    <a class="nav-link active" id="contributors-tab" data-toggle="tab" href="#contributors" role="tab" aria-controls="contributors" aria-selected="false" style= "font-size: 150%">Contributors</a>
+    </li>
+
+    <li class="nav-item">
+    <a class="nav-link" id="tasklist-tab" data-toggle="tab" href="#tasklist" role="tab" aria-controls="tasklist" aria-selected="false" style= "font-size: 150%">Task List</a>
+    </li>
+
+    <li class="nav-item">
+     <a class="nav-link" id="forum-tab" data-toggle="tab" href="#forum" role="tab" aria-controls="forum" aria-selected="false" style= "font-size: 150%">Forum</a>
+    </li>
+
+    
+</ul>
+
+
+
+
+
+    
   </div><br><br>
 
         	<h4 class="mb-5">List of Contributors</h4>
