--- a/Report3/home-test/about.html
+++ b/Report3/home-test/about.html
@@ -21,7 +21,10 @@
 
     <!-- Custom styles for this template -->
     <link href="css/landing-page.min.css" rel="stylesheet">
+         <style type="text/css">
+      tab1 { padding-left: 10em; }
 
+    </style>
   </head>
 
   <body>
@@ -52,6 +55,7 @@
     </div>
 
     <div class="container">
+	  <h3> Register </h3><br>
       <label for="name"><b>Name</b></label>
       <input type="text" placeholder="Enter Name" name="name" required>
 
@@ -345,8 +349,8 @@
       <label for="cpsw"><b>Confirm password</b></label>
       <input type="password" placeholder="Confirm Password" name="cpsw" required>
         
-      <button class="btn btn-block btn-lg btn-primary" type="submit">Login</button>
-      <label>
+      <tab1></tab1><button class="btn btn-lg btn-primary" type="submit" style ="width:25%;">Login</button>
+      <tab1><label>
         <input type="checkbox" checked="checked" name="remember"> Remember me
       </label>
     </div>
@@ -375,8 +379,8 @@
       <label for="psw"><b>Password</b></label>
       <input type="password" placeholder="Enter Password" name="psw" required>
         
-      <button class="btn btn-block btn-lg btn-primary" type="submit">Login</button>
-      <label>
+       <tab1></tab1><button class="btn btn-lg btn-primary" type="submit" style ="width:25%;">Login</button>
+      <tab1><label>
         <input type="checkbox" checked="checked" name="remember"> Remember me
       </label>
     </div>
