--- a/Report3/home-test/thisproject.html
+++ b/Report3/home-test/thisproject.html
@@ -35,7 +35,7 @@
         <a class="navbar-brand" href="projects.html">Projects</a>
         <a class="navbar-brand" href="faq.html">FAQ</a>
         <a class="navbar-brand" href="contact.html">Contact</a>
-        <a class="btn btn-primary" href="#" onclick="document.getElementById('id02').style.display='block'" style="width:auto;">Sign In</a>
+        <a class="btn btn-primary" href="#" onclick="location.href='/home-test/login.html'" style="width:auto;">Sign In</a>
       </div>
     </nav>
 	
