--- a/Report3/home-test/aut_projects.html
+++ b/Report3/home-test/aut_projects.html
@@ -57,39 +57,6 @@
             <img  width="100%" height="30" src="img/bg-masthead.jpg" alt="">
     </div>
 
-	<div id="id03" class="modal" align="left">
-
-		<form class="modal-content animate" action="/action_page3.php">
-		 	<div class="imgcontainer">
-		 		<span onclick="document.getElementById('id03').style.display='none'" class="close" title="Close Modal">&times;
-		 		</span>
-	    	</div>
-
-
-<div class="container">
-		<label for="title"><b>Project Title</b></label>
-		<input type="text" placeholder="Enter Project Title" name="title" required><br><br>
-		<label for="pdis"><b>Project Description</b></label><br><br>
-		<textarea placeholder="Project Description" name="description" rows="10" class = "form-control"></textarea><br>
-
-				<label for="privacy"><b>Privacy</b></label>
-				<select name="privacy" class= "form-control" >
-					<option value="private">Private</option>
-					<option value="public" selected>Public</option>
-				</select><br>
-
-				<label for="number"><b>Max Number of Contributors</b></label>
-				<input class = "form-control" type="number" name="points" min="1" max="100" step="1" value="5"><br>
-
-			</div>
-
-			<tab1><tab1><button  type="submit" class="btn btn-lg btn-primary" style ="width:50%;">Submit</button>
-			<label style="text-align: center">
-				<tab1>&ensp;&ensp;<input type="checkbox" checked="checked" name="takeme"> Take me to project page
-			</label><br>
-		</form>
-	</div>
-
 	<!-- Project Selection -->
 
 <div id="id04" class="modal" align="left">
@@ -121,7 +88,7 @@
 		</div></div>
 
 	<div>
-	<a class="btn btn-primary" href="#" onclick="document.getElementById('id03').style.display='block'" style="width:auto;">Create New Project</a></div>
+	<a class="btn btn-primary" href="#" onclick="location.href='/home-test/aut_newproject.html'" style="width:auto;">Create New Project</a></div>
 	</section>
 
 <section>
